# adk-gemini-ent

./: .env  .env.bak  .gitignore  README.md  pyproject.toml
deployment/: deploy.py
deployment/agent_engine/: deploy.py  list.py  test_remote.py
deployment/agent_space/: delete.sh  deploy.sh  list.sh
fact_agent/: .env  agent.py  deploy.py  test_local.py  tools.py
